# game-engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  shader_gen.py  version.in
include/: version.h
src/: camera_controller.cpp  camera_controller.h  image.cpp  image.h  image_loader.cpp  image_loader.h  loader.cpp  loader.h  main.cpp  rid_owner.h  scene.cpp  scene.h  time.h  timer.h
src/io/: asset_loader.cpp  asset_loader.h  compression.cpp  compression.h  image.cpp  image.h  image_loader.cpp  image_loader.h  mesh.h
src/math/: float16.cpp  float16.h  util.h
src/rendering/: camera.cpp  camera.h  environment.cpp  environment.h  material.cpp  material.h  object_owner.h  pipeline.cpp  pipeline.h  render_scene.h  render_scene_forward.cpp  render_scene_forward.h  render_target.cpp  render_target.h  rendering_device.cpp  rendering_device.h  rendering_server.cpp  rendering_server.h  scene.h  vk_types.h  vulkan_context.cpp  vulkan_context.h
src/rendering/effects/: effects.cpp  effects.h  environment_effects.cpp  environment_effects.h
src/rendering/effects/shaders/: brdf.comp  brdf.frag  brdf.vert  cubemap.comp  irradiance_filter.frag  irradiance_filter.vert  specular_filter.frag  specular_filter.vert
src/rendering/effects/shaders/include/: cubemap_incl.glsl  filter_incl.glsl
src/rendering/shaders/: depth.vert  depth_material.vert  material.frag  material.vert  sky.frag  sky.vert  sky_effect.frag  tonemap.frag  tonemap.vert  tonemap_effect.frag  tonemap_effect.vert
src/rendering/storage/: light_storage.cpp  light_storage.h  mesh_storage.h  texture_storage.h
src/rendering/types/: allocated.h  attachment.h  camera.h  pipeline.h  resource.h  vertex.h
